RESOLVED FIXED 247369
Typo error in RenderLayerCompositor::destroyRootLayer() for Horizontal Scrollbar
https://bugs.webkit.org/show_bug.cgi?id=247369
Summary Typo error in RenderLayerCompositor::destroyRootLayer() for Horizontal Scrollbar
Ahmad Saleem
Reported 2022-11-02 09:50:35 PDT
Hi Team, While going through Blink commits, I came across following commit, which seems to indicate a typo or copy/paste error in the code: Commit - https://src.chromium.org/viewvc/blink?view=revision&revision=194036 GitHub Code - https://github.com/WebKit/WebKit/blob/3be97089de542dc412c3155045912fe6b6b70a10/Source/WebCore/rendering/RenderLayerCompositor.cpp#L4299 Why it is typo because, this is for "m_layerForHorizontalScrollbar" while we are discussing about "verticalScrollbar" and it is same as Line 4307, which is for verticalScrollbar in actual. Just creating this bug to fix the issue. Thanks!
Attachments
EWS
Comment 1 2022-11-02 15:09:12 PDT
Committed 256247@main (1ad126f47e2a): <https://commits.webkit.org/256247@main> Reviewed commits have been landed. Closing PR #6039 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2022-11-02 15:10:20 PDT
Note You need to log in before you can comment on or make changes to this bug.