Typo error in RenderLayerCompositor::destroyRootLayer() for Horizontal Scrollbar

Typo error in RenderLayerCompositor::destroyRootLayer() for Horizontal Scrollbar
https://bugs.webkit.org/show_bug.cgi?id=247369

Reviewed by Alan Baradlay.

Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=194036

This is to fix a copy paste error in "m_layerForHorizontalScrollbar", where the "verticalScrollbar" was mentioned instead of "horizontalScrollbar".

* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(RenderLayerCompositor::destroyRootLayer): Fix reference to horizontalScrollbar"

Canonical link: https://commits.webkit.org/256247@main